<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        android:background="@color/light_grey">

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:elevation="12dp"
            app:cardCornerRadius="800sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_height="200dp"
                android:layout_width="200dp"
                android:src="@drawable/resume"
                android:contentDescription="Resume Image"
                android:background="@drawable/default_border_bg"
                />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/light_grey"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="20sp"
            android:textColor="@color/grey"
            android:textStyle="bold"
          />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/userName"
            android:textSize="20sp"
            android:textColor="@color/grey"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="20sp"
            android:textColor="@color/grey"
            android:textStyle="bold"
            />

    </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_margin="8dp"
            android:elevation="12dp"
            app:cardCornerRadius="20dp"
            android:gravity="center_horizontal"
            app:cardBackgroundColor="@color/white"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

            <ImageView
                android:layout_height="40dp"
                android:layout_width="40dp"
                android:id="@+id/imgEmail"
                android:src="@drawable/email_logo"
                android:contentDescription="Resume Image"
                android:background="@drawable/default_border_bg"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                />


                <Button
                    android:id="@+id/btnEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    app:backgroundTint="@color/grey"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="Resume Image"
                    android:background="@drawable/default_border_bg"
                    />



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <ImageView
                    android:layout_height="40dp"
                    android:layout_width="40dp"
                    android:id="@+id/phone_img"
                    android:src="@drawable/phone_img"
                    android:contentDescription="Resume Image"
                    android:background="@drawable/default_border_bg"
                    android:layout_marginTop="70dp"
                    android:layout_marginStart="20dp"
                    tools:ignore="HardcodedText"
                    />

                <Button
                    android:id="@+id/btnPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    app:backgroundTint="@color/grey"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="Resume Image"
                    android:background="@drawable/default_border_bg"
                    />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <ImageView
                    android:layout_height="40dp"
                    android:layout_width="40dp"
                    android:id="@+id/imgDail"
                    android:src="@drawable/twitter_img"
                    android:contentDescription="Resume Image"
                    android:background="@drawable/default_border_bg"
                    android:layout_marginTop="130dp"
                    android:layout_marginStart="20dp"
                    tools:ignore="HardcodedText"
                    />

                <Button
                    android:id="@+id/btnTwitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tweetLink"
                    app:backgroundTint="@color/grey"
                    android:textSize="13sp"
                    android:textAllCaps="false"
                    android:padding="5dp"
                    android:layout_marginTop="130dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="Resume Image"
                    android:background="@drawable/default_border_bg"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <ImageView
                    android:layout_height="50dp"
                    android:layout_width="40dp"
                    android:id="@+id/imgBehance"
                    android:src="@drawable/behance_img"
                    android:contentDescription="Resume Image"
                    android:background="@drawable/default_border_bg"
                    android:layout_marginTop="200dp"
                    android:layout_marginStart="20dp"
                    tools:ignore="HardcodedText"
                    />

                <Button
                    android:id="@+id/btnBehance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/behance"
                    app:backgroundTint="@color/grey"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:padding="5dp"
                    android:layout_marginTop="200dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="Resume Image"
                    android:background="@drawable/default_border_bg"
                    />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <ImageView
                    android:layout_height="40dp"
                    android:layout_width="40dp"
                    android:id="@+id/imgLinkedin"
                    android:src="@drawable/linkedin_img"
                    android:contentDescription="Resume Image"
                    android:background="@drawable/default_border_bg"
                    android:layout_marginTop="280dp"
                    android:layout_marginStart="20dp"
                    tools:ignore="HardcodedText"
                    />

                <Button
                    android:id="@+id/btnLinkedin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/linkedIn"
                    app:backgroundTint="@color/grey"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:padding="5dp"
                    android:layout_marginTop="270dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="Resume Image"
                    android:background="@drawable/default_border_bg"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>


